refactor: change a image format in assets folder

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,7 @@
+// font-family: 'Cormorant Infant', serif;
+
+// font-family: 'Josefin Sans', sans-serif;
 
 body {
-    background-color: red;
+    background-color: rgb(117, 117, 237);
 }
