--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,6 @@
 // font-family: 'Cormorant Infant', serif;
 
 // font-family: 'Josefin Sans', sans-serif;
+
+@import 'base/basic';
+@import 'base/colors';
