--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 // font-family: 'Cormorant Infant', serif;
 
 // font-family: 'Josefin Sans', sans-serif;
-
+@import 'vendors/normalize';
 @import 'base/basic';
 @import 'base/colors';
