--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,35 @@ legend {
 }
 
 body {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400;
   line-height: 1.6;
+  font-size: 1.25rem;
+  color: rgb(41, 46, 54);
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  color: rgb(0, 0, 0);
+  line-height: 1.1;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 0.3em;
+}
+
+h3 {
+  font-size: 2.25rem;
+}
+
+h4 {
+  font-size: 1.8rem;
 }
 
 ul, li {
@@ -182,7 +210,7 @@ a {
 }
 
 img {
-  display: block;
+  display: inline-block;
   max-width: 100%;
 }
 
@@ -190,4 +218,359 @@ img {
   width: 90%;
   max-width: 1400px;
   margin: 0 auto;
+}
+
+.btn {
+  text-align: center;
+  font-size: 1.35rem;
+  line-height: 1.4;
+  border: none;
+  outline: 3px solid rgb(225, 177, 104);
+  cursor: pointer;
+  padding: 0.5em 0;
+  width: calc(230px + 2vw);
+  background-color: transparent;
+  transition: all 200ms ease-in;
+}
+.btn--border {
+  color: rgb(225, 177, 104);
+}
+.btn--border:hover {
+  color: rgb(0, 0, 0);
+  outline-offset: -5px;
+  background-color: #d3902a;
+}
+.btn--color {
+  color: rgb(0, 0, 0);
+  background-color: rgb(225, 177, 104);
+}
+.btn--color:hover {
+  outline-offset: -5px;
+  background-color: #d3902a;
+}
+
+.section-heading {
+  margin-bottom: 2em;
+}
+.section-heading__title {
+  display: inline-block;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  border-block: 2px solid rgb(225, 177, 104);
+  padding-block: 0.5em 0.2em;
+  margin-bottom: 1em;
+}
+.section-heading > p {
+  line-height: 1.3;
+}
+
+.header {
+  text-align: center;
+  padding-block: 2em;
+}
+.header-bg {
+  background-color: rgb(41, 46, 54);
+  border-bottom: 2px solid rgb(92, 97, 104);
+}
+.header__nav {
+  display: none;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+}
+.info > * {
+  margin-bottom: 1em;
+}
+.info__logo {
+  order: -1;
+  margin-bottom: 2em;
+}
+
+@media (min-width: 1000px) {
+  .info {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .info > * {
+    margin: 0;
+  }
+  .info__logo {
+    order: 0;
+  }
+}
+.hero {
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding-block: 3em;
+}
+.hero-bg {
+  background-color: rgb(41, 46, 54);
+}
+.hero__title {
+  font-size: calc(3.5rem + 1vw);
+  color: rgb(255, 255, 255);
+  margin: 0 0 0.5em;
+}
+.hero__btn {
+  margin: 2em 0 3em;
+}
+
+@media (min-width: 500px) {
+  .hero-bg {
+    position: relative;
+  }
+  .hero-bg::after {
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+    background-color: rgba(85, 85, 85, 0.4);
+    top: 0;
+    z-index: 2;
+    position: absolute;
+  }
+  .hero__text {
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 80%;
+    text-shadow: 2px 2px 1px rgb(41, 46, 54);
+    z-index: 10;
+  }
+}
+@media (min-width: 750px) {
+  .hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .hero-bg::after {
+    display: none;
+  }
+  .hero__text {
+    position: static;
+    text-align: left;
+    flex-basis: 50%;
+    transform: none;
+    padding-right: 1em;
+  }
+  .hero__img {
+    flex-basis: 50%;
+  }
+  .hero__btn {
+    margin-bottom: 0;
+  }
+}
+.information {
+  display: grid;
+  gap: 2em;
+  grid-auto-flow: row;
+  padding-block: 3em;
+}
+.information-bg {
+  background-color: rgb(244, 221, 211);
+}
+.information__icon {
+  display: flex;
+  width: 83px;
+  height: 83px;
+  border-radius: 50%;
+  background-color: rgb(41, 46, 54);
+  margin: 0 auto 0.7em;
+}
+.information__icon > img {
+  margin: auto;
+}
+.information__block {
+  text-align: center;
+}
+.information__block > span {
+  font-weight: 300;
+}
+
+@media (min-width: 750px) {
+  .information {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+.storytelling {
+  display: flex;
+  flex-direction: column;
+  padding-block: 3em;
+}
+.storytelling-bg {
+  background-color: rgb(244, 221, 211);
+}
+.storytelling__img {
+  margin-bottom: 1em;
+}
+.storytelling__text > p {
+  margin-bottom: 1em;
+}
+.storytelling__block {
+  margin-bottom: 1em;
+}
+.storytelling__block > span {
+  display: block;
+  color: rgb(0, 0, 0);
+  text-decoration-line: underline;
+}
+.storytelling__autograph {
+  text-align: end;
+  margin-top: 1em;
+}
+
+@media (min-width: 500px) {
+  .storytelling__block {
+    -moz-columns: 300px 2;
+         columns: 300px 2;
+  }
+}
+@media (min-width: 750px) {
+  .storytelling {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .storytelling__img {
+    flex-basis: 50%;
+  }
+  .storytelling__text {
+    flex-basis: 45%;
+  }
+}
+.menu {
+  padding-block: 3em;
+}
+.menu__category {
+  margin-bottom: 2em;
+}
+.menu__category > h3 {
+  font-weight: 400;
+  margin-bottom: 0.5em;
+}
+
+.card {
+  max-width: 490px;
+  margin-bottom: 3em;
+}
+.card__img {
+  margin-bottom: 2em;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+  line-height: 1.3;
+  color: rgb(92, 97, 104);
+}
+.item__img {
+  max-width: 84px;
+  margin-bottom: 0.5em;
+}
+.item__title > h4 {
+  font-weight: 400;
+}
+.item__price {
+  color: rgb(0, 0, 0);
+}
+
+@media (min-width: 500px) {
+  .item {
+    flex-direction: row;
+    align-items: center;
+  }
+  .item > * {
+    margin-bottom: 0;
+  }
+  .item__img {
+    margin-right: 1em;
+    flex: auto;
+  }
+}
+@media (min-width: 750px) {
+  .item__title {
+    position: relative;
+    flex: 100%;
+    padding-right: 2em;
+  }
+  .item__title > p {
+    border-bottom: 2px solid rgb(92, 97, 104);
+  }
+  .item__price {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: inherit;
+  }
+}
+@media (min-width: 1000px) {
+  .menu {
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu__card {
+    flex-basis: 35%;
+  }
+  .menu__gallery {
+    flex-basis: 60%;
+    max-width: 820px;
+    padding-top: 2.5em;
+  }
+}
+.testimonial {
+  color: rgb(255, 255, 255);
+  font-weight: 300;
+  padding-block: 3em;
+}
+.testimonial > h3,
+.testimonial h4 {
+  color: inherit;
+}
+.testimonial__heading > h2 {
+  color: inherit;
+}
+.testimonial-bg {
+  background-color: rgb(41, 46, 54);
+}
+.testimonial__card {
+  padding: 1em;
+  background-color: rgb(52, 57, 66);
+  margin-bottom: 1em;
+}
+
+.autor {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid rgb(92, 97, 104);
+  margin-bottom: 2em;
+}
+.autor__photo {
+  position: relative;
+  margin-right: 1em;
+}
+.autor__photo::after {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 30px;
+  height: 30px;
+  background-image: url(./../assets/icons/quotes.png);
+}
+.autor__name > span {
+  color: rgb(225, 177, 104);
+}
+
+@media (min-width: 1000px) {
+  .testimonial__block {
+    display: flex;
+  }
 }
