--- a/sass/base/_basic.scss
+++ b/sass/base/_basic.scss
@@ -10,11 +10,39 @@
     padding: 0;
     margin: 0;
   }
-  
+
   body {
+    font-family: $ff-text;
+    font-weight: $fw-normal;
     line-height: 1.6;
+    font-size: $fs-text;
+    color: $clr-secondary;
   }
 
+  h1, h2, h3, h4, h5 {
+    font-family: $ff-title;
+    font-weight: $fw-bold;
+    color: $clr-black;
+    line-height: 1.1;
+  }
+
+  h1 {
+    font-size: $fs-h1;
+  }
+
+  h2 {
+    font-size: $fs-h2;
+    margin-bottom: 0.3em;
+  }
+
+  h3 {
+    font-size: $fs-h3;
+  }
+
+  h4 {
+    font-size: $fs-h4;
+  }
+  
   ul, li {
     list-style: none;
   }
@@ -26,7 +54,7 @@
   }
 
   img {
-    display: block;
+    display: inline-block;
     max-width: 100%;
   }
   
