--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -4,7 +4,7 @@ $clr-white: rgba(255, 255, 255, 1);
 $clr-black: rgba(0, 0, 0, 1);
 $clr-gray: rgba(133, 133, 133, 1);
 $clr-gray-light: rgba(196, 196, 196, 1);
-$clr-gray-darker: rgba(85, 85, 85, 1);
 $clr-gray-dark: rgba(92, 97, 104, 1);
-$clr-pink-light: rgba(255, 248, 245, 1);
+$clr-gray-darker: rgba(52, 57, 66, 1);
+$clr-pink-light: rgb(244, 221, 211);
 $clr-blue-light: rgba(130, 180, 180, 1);
