--- a/css/style.css
+++ b/css/style.css
@@ -177,13 +177,14 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: "Cormorant Infant", serif;
-  font-weight: 600;
+  font-weight: 400;
   color: rgb(0, 0, 0);
   line-height: 1.1;
 }
 
 h1 {
   font-size: 3.5rem;
+  font-weight: 600;
 }
 
 h2 {
@@ -210,8 +211,12 @@ a {
 }
 
 img {
-  display: inline-block;
+  display: block;
   max-width: 100%;
+}
+
+input {
+  all: unset;
 }
 
 .container {
@@ -280,6 +285,7 @@ img {
 .info {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .info > * {
   margin-bottom: 1em;
@@ -317,6 +323,9 @@ img {
 }
 .hero__btn {
   margin: 2em 0 3em;
+}
+.hero__img > img {
+  width: 100%;
 }
 
 @media (min-width: 500px) {
@@ -556,6 +565,7 @@ img {
   display: flex;
   align-items: center;
   border-bottom: 2px solid rgb(92, 97, 104);
+  padding-bottom: 1em;
   margin-bottom: 2em;
 }
 .autor__photo {
@@ -607,4 +617,251 @@ img {
   .testimonial__card {
     flex-basis: 32%;
   }
+}
+.offers {
+  padding-block: 3em;
+}
+
+.offer {
+  color: rgb(41, 46, 54);
+  background-color: rgb(130, 180, 180);
+  padding: 2em 1em;
+  margin-bottom: 1em;
+}
+.offer__price {
+  color: rgb(41, 46, 54);
+  font-family: "Cormorant Infant", serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  line-height: 0.9;
+  text-align: end;
+  width: 5em;
+  height: 3em;
+  border-radius: 50%;
+  border: 2px solid rgb(225, 177, 104);
+  background-color: rgb(255, 255, 255);
+  padding-right: 1em;
+  margin-bottom: 2em;
+}
+.offer__price > span {
+  display: block;
+}
+.offer__price > span:nth-of-type(1) {
+  font-size: 0.7em;
+}
+.offer__price > span:nth-of-type(2) {
+  font-size: 2em;
+}
+.offer__text > .section-heading__title {
+  border-color: inherit;
+}
+.offer__img {
+  max-width: 60%;
+  margin: 0 auto;
+}
+
+@media (min-width: 500px) {
+  .offer {
+    max-width: 75%;
+    padding: 2em;
+    margin: 0 auto 1em;
+  }
+}
+@media (min-width: 750px) {
+  .offers__block {
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+  }
+}
+@media (min-width: 1000px) {
+  .offer {
+    display: flex;
+    align-items: center;
+  }
+  .offer__text {
+    margin-bottom: 0;
+  }
+}
+.gallery {
+  text-align: center;
+  padding-bottom: 3em;
+}
+.gallery__block {
+  display: grid;
+  gap: 1em;
+  margin: 0 auto 2em;
+}
+.gallery__heading {
+  max-width: 760px;
+  margin: 0 auto 2em;
+}
+
+.segment {
+  text-align: start;
+  max-width: 350px;
+  margin: 0 auto;
+}
+.segment__img {
+  width: 100%;
+  margin-bottom: 1em;
+}
+.segment__title {
+  position: relative;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid rgb(196, 196, 196);
+  margin-bottom: 1em;
+}
+.segment__title > span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+}
+.segment__text {
+  line-height: 1.3;
+}
+
+@media (min-width: 500px) {
+  .gallery__block {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 750px) {
+  .gallery__block {
+    max-width: 80%;
+  }
+}
+@media (min-width: 1000px) {
+  .gallery__block {
+    max-width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.advantages {
+  color: rgb(255, 255, 255);
+  padding-block: 3em;
+}
+.advantages-bg {
+  background-color: rgb(41, 46, 54);
+}
+.advantages__heading > h2 {
+  color: inherit;
+}
+.advantages__block {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.advantages__card {
+  text-align: center;
+  padding: 2em;
+  border: 20px solid rgb(52, 57, 66);
+}
+.advantages__card > img {
+  margin: 0 auto 0.5em;
+}
+@media (min-width: 500px) {
+  .advantages__card {
+    width: 70%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 750px) {
+  .advantages__block {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .advantages__card {
+    flex: 0 0 30%;
+  }
+}
+@media (min-width: 1000px) {
+  .advantages {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 2em;
+  }
+  .advantages__heading {
+    flex-basis: 35%;
+    margin-bottom: 0;
+  }
+  .advantages__block {
+    flex-basis: 60%;
+  }
+}
+
+.blog {
+  padding-top: 3em;
+}
+@media (min-width: 750px) {
+  .blog__preview {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1000px) {
+  .blog__block {
+    display: flex;
+    justify-content: space-between;
+    gap: 2em;
+  }
+}
+
+.preview__btn {
+  position: relative;
+}
+.preview__btn::after {
+  position: absolute;
+  top: 0;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(52, 57, 66, 0.6);
+}
+.preview__btn > img {
+  width: 100%;
+}
+.preview__btn > button {
+  position: absolute;
+  top: calc(50% - 25px);
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+.preview__text {
+  border: 2px solid rgb(196, 196, 196);
+  border-top: none;
+  padding: 1.5em;
+}
+.preview__text > span + span {
+  margin-left: 1em;
+}
+
+.reservation {
+  color: rgb(255, 255, 255);
+  background-color: rgba(41, 46, 54, 0.9);
+  padding: 5em;
+}
+.reservation-bg {
+  background-image: url(./../assets/images/reservation-bg-img.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 8em;
+}
+
+.form {
+  display: grid;
+}
+.form > legend {
+  margin-bottom: 1em;
+}
+.form > input {
+  color: inherit;
+  border: 1px solid rgb(133, 133, 133);
+  padding: 0.5em;
 }
