--- a/sass/base/_basic.scss
+++ b/sass/base/_basic.scss
@@ -21,13 +21,14 @@
 
   h1, h2, h3, h4, h5 {
     font-family: $ff-title;
-    font-weight: $fw-bold;
+    font-weight: $fw-normal;
     color: $clr-black;
     line-height: 1.1;
   }
 
   h1 {
     font-size: $fs-h1;
+    font-weight: $fw-bold;
   }
 
   h2 {
@@ -54,8 +55,12 @@
   }
 
   img {
-    display: inline-block;
+    display: block;
     max-width: 100%;
+  }
+
+  input {
+    all: unset;
   }
   
   .container {
