--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,3 +20,5 @@
 @import 'layouts/advantages';
 @import 'layouts/blog';
 @import 'layouts/reservation';
+@import 'layouts/subscribe';
+@import 'layouts/footer';
