refactor: code review header, hero, info and storytlling sections

--- a/sass/base/_basic.scss
+++ b/sass/base/_basic.scss
@@ -22,8 +22,9 @@
   h1, h2, h3, h4, h5 {
     font-family: $ff-title;
     font-weight: $fw-normal;
-    color: $clr-black;
     line-height: 1.1;
+    margin-top: 0;
+    margin-bottom: 0.3em;
   }
 
   h1 {
@@ -33,7 +34,6 @@
 
   h2 {
     font-size: $fs-h2;
-    margin-bottom: 0.3em;
   }
 
   h3 {
