--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,9 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: "Cormorant Infant", serif;
   font-weight: 400;
-  color: rgb(0, 0, 0);
   line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 0.3em;
 }
 
 h1 {
@@ -189,7 +190,6 @@ h1 {
 
 h2 {
   font-size: 2.5rem;
-  margin-bottom: 0.3em;
 }
 
 h3 {
@@ -281,7 +281,7 @@ input {
 }
 .header-bg {
   background-color: rgb(41, 46, 54);
-  border-bottom: 2px solid rgb(92, 97, 104);
+  border-bottom: 1px solid rgb(133, 133, 133);
 }
 .header__nav {
   display: none;
@@ -290,6 +290,7 @@ input {
 .info {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
 }
 .info > * {
@@ -299,9 +300,9 @@ input {
   order: -1;
   margin-bottom: 2em;
 }
-
-@media (min-width: 1000px) {
+@media screen and (min-width: 900px) {
   .info {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -311,8 +312,10 @@ input {
   }
   .info__logo {
     order: 0;
+    flex-basis: 30%;
   }
 }
+
 .hero {
   text-align: center;
   color: rgb(255, 255, 255);
@@ -321,70 +324,44 @@ input {
 .hero-bg {
   background-color: rgb(41, 46, 54);
 }
+.hero__text {
+  margin-bottom: 2em;
+}
+.hero__text > p {
+  margin-bottom: 2em;
+}
 .hero__title {
   font-size: calc(3.5rem + 1vw);
-  color: rgb(255, 255, 255);
-  margin: 0 0 0.5em;
 }
-.hero__btn {
-  margin: 2em 0 3em;
-}
-.hero__img > img {
-  width: 100%;
-}
-
-@media (min-width: 500px) {
-  .hero-bg {
-    position: relative;
-  }
-  .hero-bg::after {
-    width: 100%;
-    height: 100%;
-    content: "";
-    display: block;
-    background-color: rgba(85, 85, 85, 0.4);
-    top: 0;
-    z-index: 2;
-    position: absolute;
-  }
-  .hero__text {
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    max-width: 80%;
-    text-shadow: 2px 2px 1px rgb(41, 46, 54);
-    z-index: 10;
+@media screen and (min-width: 600px) {
+  .hero__img {
+    max-width: 60%;
+    margin: 0 auto;
   }
 }
-@media (min-width: 750px) {
+@media screen and (min-width: 900px) {
   .hero {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    text-align: start;
   }
-  .hero-bg::after {
-    display: none;
+  .hero > * {
+    margin: 0;
   }
   .hero__text {
-    position: static;
-    text-align: left;
     flex-basis: 50%;
-    transform: none;
-    padding-right: 1em;
   }
   .hero__img {
-    flex-basis: 50%;
-  }
-  .hero__btn {
-    margin-bottom: 0;
+    flex-basis: 40%;
   }
 }
+
 .information {
   display: grid;
-  gap: 2em;
-  grid-auto-flow: row;
-  padding-block: 3em;
+  gap: 1em;
+  padding-top: 3em;
 }
 .information-bg {
   background-color: rgb(244, 221, 211);
@@ -395,7 +372,7 @@ input {
   height: 83px;
   border-radius: 50%;
   background-color: rgb(41, 46, 54);
-  margin: 0 auto 0.7em;
+  margin: 0 auto 1em;
 }
 .information__icon > img {
   margin: auto;
@@ -406,16 +383,43 @@ input {
 .information__block > span {
   font-weight: 300;
 }
-
-@media (min-width: 750px) {
+@media screen and (min-width: 600px) {
+  .information__block {
+    text-align: start;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+  }
+  .information__icon {
+    margin: 0;
+    flex-shrink: 0;
+  }
+  .information__text {
+    margin-left: 1em;
+  }
+}
+@media screen and (min-width: 900px) {
   .information {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
+  .information__block {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+  }
+  .information__icon {
+    margin-bottom: 1em;
+  }
+  .information__text {
+    margin: 0;
+  }
 }
+
 .storytelling {
-  display: flex;
-  flex-direction: column;
   padding-block: 3em;
 }
 .storytelling-bg {
@@ -423,6 +427,9 @@ input {
 }
 .storytelling__img {
   margin-bottom: 1em;
+}
+.storytelling__img > img {
+  width: 100%;
 }
 .storytelling__text > p {
   margin-bottom: 1em;
@@ -435,29 +442,25 @@ input {
   color: rgb(0, 0, 0);
   text-decoration-line: underline;
 }
-.storytelling__autograph {
-  text-align: end;
-  margin-top: 1em;
+.storytelling__autograph > img {
+  margin-left: auto;
 }
-
-@media (min-width: 500px) {
+@media screen and (min-width: 600px) {
   .storytelling__block {
     -moz-columns: 300px 2;
          columns: 300px 2;
   }
 }
-@media (min-width: 750px) {
+@media screen and (min-width: 900px) {
   .storytelling {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-  .storytelling__img {
-    flex-basis: 50%;
-  }
-  .storytelling__text {
-    flex-basis: 45%;
+    align-items: start;
+    gap: 2em;
   }
 }
+
 .menu {
   padding-block: 3em;
 }
