--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -8,3 +8,5 @@ $clr-gray-dark: rgba(92, 97, 104, 1);
 $clr-gray-darker: rgba(52, 57, 66, 1);
 $clr-pink-light: rgb(244, 221, 211);
 $clr-blue-light: rgba(130, 180, 180, 1);
+
+$border-color: 1px solid $clr-gray;
