--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,7 +4,7 @@
 
     &-bg {
         background-color: $clr-secondary;
-        border-bottom: 2px solid $clr-gray-dark;
+        border-bottom: $border-color;
     }
 
     &__nav {
@@ -13,9 +13,7 @@
 }
 
 .info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include flex(column);
 
     &>* {
         margin-bottom: 1em;
@@ -25,21 +23,19 @@
         order: -1;
         margin-bottom: 2em;
     }
-}
 
-@media (min-width: 1000px) {
+    @include break($breakpoint-tablet-landscape) {
+        & {
+            @include flex(row);
+        }
 
-    .info {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        
         &>* {
             margin: 0;
         }
-    
+
         &__logo {
             order: 0;
+            flex-basis: 30%;
         }
     }
 }
