--- a/sass/layouts/_storytelling.scss
+++ b/sass/layouts/_storytelling.scss
@@ -1,6 +1,4 @@
 .storytelling {
-    display: flex;
-    flex-direction: column;
     padding-block: 3em;
 
     &-bg {
@@ -9,6 +7,10 @@
 
     &__img {
         margin-bottom: 1em;
+    }
+
+    &__img > img {
+        width: 100%;
     }
 
     &__text {
@@ -28,34 +30,20 @@
         }
     }
 
-    &__autograph {
-        text-align: end;
-        margin-top: 1em;
+    &__autograph > img {
+        margin-left: auto;
     }
-}
 
-@media (min-width:500px) {
-
-    .storytelling {
-
+    @include break($breakpoint-tablet-portrait) {
         &__block {
             columns: 300px 2;
         }
     }
-}
 
-@media (min-width: 750px) {
-
-    .storytelling {
-        flex-direction: row;
-        justify-content: space-between;
-
-        &__img {
-            flex-basis: 50%;
-        }
-
-        &__text {
-            flex-basis: 45%;
+    @include break($breakpoint-tablet-landscape) {
+        & {
+            @include flex(row, space-between, start);
+            gap: 2em;
         }
     }
 }
