refactor: code review menu, offers, gallery and testimonal sections

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -9,4 +9,5 @@ $clr-gray-darker: rgba(52, 57, 66, 1);
 $clr-pink-light: rgb(244, 221, 211);
 $clr-blue-light: rgba(130, 180, 180, 1);
 
-$border-color: 1px solid $clr-gray;
+$clr-border: 1px solid $clr-gray;
+$clr-bg-opacity: rgba(52, 57, 66, 0.9);
