--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,7 +4,7 @@
 
     &-bg {
         background-color: $clr-secondary;
-        border-bottom: $border-color;
+        border-bottom: $clr-border;
     }
 
     &__nav {
