--- a/css/style.css
+++ b/css/style.css
@@ -240,23 +240,20 @@ input {
 .btn--border {
   color: rgb(225, 177, 104);
 }
-.btn--border:hover {
-  color: rgb(0, 0, 0);
-  outline-offset: -5px;
-  background-color: #d3902a;
-}
 .btn--color {
   color: rgb(0, 0, 0);
   background-color: rgb(225, 177, 104);
-}
-.btn--color:hover {
-  outline-offset: -5px;
-  background-color: #d3902a;
 }
 .btn--submit {
   color: rgb(0, 0, 0);
   background-color: rgb(255, 255, 255);
   outline: none;
+}
+.btn--border:hover, .btn--color:hover, .btn--submit:hover {
+  color: rgb(255, 255, 255);
+  outline: 3px solid rgb(255, 255, 255);
+  outline-offset: -5px;
+  background-color: #d3902a;
 }
 
 .section-heading {
@@ -464,94 +461,82 @@ input {
 .menu {
   padding-block: 3em;
 }
-.menu__category {
-  margin-bottom: 2em;
-}
-.menu__category > h3 {
-  font-weight: 400;
-  margin-bottom: 0.5em;
-}
-
-.card {
+.menu__card {
   max-width: 490px;
-  margin-bottom: 3em;
 }
-.card__img {
+.menu__img {
   margin-bottom: 2em;
+}
+.menu__gallery {
+  margin-top: 3em;
+}
+.menu__gallery > * + * {
+  margin-top: 2em;
+}
+.menu__category > * + * {
+  margin-top: 1em;
+}
+@media screen and (min-width: 900px) {
+  .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .menu__card {
+    flex-basis: 40%;
+  }
+  .menu__gallery {
+    flex-basis: 55%;
+  }
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1em;
-  line-height: 1.3;
-  color: rgb(92, 97, 104);
+  line-height: 1.1;
 }
 .item__img {
   max-width: 84px;
   margin-bottom: 0.5em;
 }
-.item__title > h4 {
-  font-weight: 400;
+.item__title > p {
+  color: rgb(92, 97, 104);
 }
 .item__price {
-  color: rgb(0, 0, 0);
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-size: 1.2em;
+  color: rgb(52, 57, 66);
 }
-
-@media (min-width: 500px) {
+@media screen and (min-width: 600px) {
   .item {
+    display: flex;
     flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
   }
-  .item > * {
+  .item__img {
     margin-bottom: 0;
   }
-  .item__img {
-    margin-right: 1em;
-    flex: auto;
-  }
-}
-@media (min-width: 750px) {
   .item__title {
     position: relative;
-    flex: 100%;
+    flex-basis: 100%;
     padding-right: 2em;
+    margin-left: 1em;
   }
   .item__title > p {
-    border-bottom: 2px solid rgb(92, 97, 104);
+    border-bottom: 2px dotted rgb(52, 57, 66);
   }
   .item__price {
     position: absolute;
     right: 0;
     bottom: 0;
-    color: inherit;
   }
 }
-@media (min-width: 1000px) {
-  .menu {
-    display: flex;
-    justify-content: space-between;
-  }
-  .menu__card {
-    flex-basis: 35%;
-  }
-  .menu__gallery {
-    flex-basis: 60%;
-    max-width: 820px;
-    padding-top: 2.5em;
-  }
-}
+
 .testimonial {
   color: rgb(255, 255, 255);
   font-weight: 300;
   padding-top: 3em;
-}
-.testimonial > h3,
-.testimonial h4 {
-  color: inherit;
-}
-.testimonial__heading > h2 {
-  color: inherit;
 }
 .testimonial-bg {
   background-color: rgb(41, 46, 54);
@@ -559,20 +544,50 @@ input {
 .testimonial__card {
   padding: 1em;
   background-color: rgba(52, 57, 66, 0.9);
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 .testimonial__img {
+  content: "";
   background-image: url(./../assets/images/testimonial-img.jpg);
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
   height: calc(300px + 10vw);
 }
+@media screen and (min-width: 600px) {
+  .testimonial__block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: nowrap;
+    position: absolute;
+    overflow: hidden;
+    margin-top: 1.5em;
+  }
+  .testimonial__block > * + * {
+    margin-left: 1em;
+  }
+  .testimonial__card {
+    flex-basis: 500px;
+    flex-shrink: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .testimonial__block {
+    position: static;
+  }
+  .testimonial__card {
+    flex-basis: 31%;
+  }
+}
 
 .autor {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  border-bottom: 2px solid rgb(92, 97, 104);
+  border-bottom: 1px solid rgb(133, 133, 133);
   padding-bottom: 1em;
   margin-bottom: 2em;
 }
@@ -593,50 +608,18 @@ input {
 }
 .autor__name > span {
   color: rgb(225, 177, 104);
-  display: inline-block;
   line-height: 1.1;
 }
 
-@media (min-width: 750px) {
-  .testimonial-bg {
-    position: relative;
-  }
-  .testimonial__block {
-    position: absolute;
-    bottom: 1em;
-    display: flex;
-    gap: 1em;
-    overflow: hidden;
-  }
-  .testimonial__card {
-    width: 500px;
-    flex-shrink: 0;
-  }
-}
-@media (min-width: 1000px) {
-  .testimonial-bg {
-    position: static;
-  }
-  .testimonial__block {
-    position: static;
-    justify-content: space-between;
-    margin-bottom: 1em;
-  }
-  .testimonial__card {
-    flex-basis: 32%;
-  }
-}
 .offers {
   padding-block: 3em;
 }
-
-.offer {
-  color: rgb(41, 46, 54);
+.offers__deal {
   background-color: rgb(130, 180, 180);
-  padding: 2em 1em;
+  padding: 2em;
   margin-bottom: 1em;
 }
-.offer__price {
+.offers__price {
   color: rgb(41, 46, 54);
   font-family: "Cormorant Infant", serif;
   text-transform: uppercase;
@@ -651,48 +634,48 @@ input {
   padding-right: 1em;
   margin-bottom: 2em;
 }
-.offer__price > span {
+.offers__price > span {
   display: block;
 }
-.offer__price > span:nth-of-type(1) {
+.offers__price > span:nth-of-type(1) {
   font-size: 0.7em;
 }
-.offer__price > span:nth-of-type(2) {
+.offers__price > span:nth-of-type(2) {
   font-size: 2em;
 }
-.offer__text > .section-heading__title {
+.offers__text > .section-heading__title {
   border-color: inherit;
 }
-.offer__img {
-  max-width: 60%;
+.offers__img {
+  max-width: 80%;
   margin: 0 auto;
 }
-
-@media (min-width: 500px) {
-  .offer {
-    max-width: 75%;
-    padding: 2em;
-    margin: 0 auto 1em;
-  }
-}
-@media (min-width: 750px) {
-  .offers__block {
+@media screen and (min-width: 600px) {
+  .offers__deal {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    gap: 1em;
-  }
-}
-@media (min-width: 1000px) {
-  .offer {
-    display: flex;
     align-items: center;
   }
-  .offer__text {
+  .offers__text {
     margin-bottom: 0;
   }
 }
+@media screen and (min-width: 900px) {
+  .offers__block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 2em;
+    align-content: flex-start;
+  }
+  .offers__deal {
+    margin-bottom: 0;
+  }
+}
+
 .gallery {
-  text-align: center;
   padding-bottom: 3em;
 }
 .gallery__block {
@@ -701,52 +684,68 @@ input {
   margin: 0 auto 2em;
 }
 .gallery__heading {
+  text-align: center;
   max-width: 760px;
   margin: 0 auto 2em;
 }
-
-.segment {
-  text-align: start;
-  max-width: 350px;
-  margin: 0 auto;
+.gallery__img {
+  margin-bottom: 0.5em;
 }
-.segment__img {
+.gallery__img > img {
   width: 100%;
-  margin-bottom: 1em;
 }
-.segment__title {
+.gallery__title {
   position: relative;
-  padding-bottom: 0.5em;
-  border-bottom: 1px solid rgb(196, 196, 196);
-  margin-bottom: 1em;
+  padding-right: 2em;
+  border-bottom: 1px solid rgb(133, 133, 133);
 }
-.segment__title > span {
+.gallery__title > span {
   position: absolute;
   top: 0;
   right: 0;
   font-family: "Cormorant Infant", serif;
   font-weight: 600;
 }
-.segment__text {
-  line-height: 1.3;
+.gallery__btn {
+  text-align: center;
 }
-
-@media (min-width: 500px) {
+@media screen and (min-width: 600px) {
+  .gallery__card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1em;
+  }
+  .gallery__img {
+    flex-basis: 35%;
+    flex-shrink: 0;
+    margin-bottom: 0;
+  }
+  .gallery__text {
+    flex-grow: 1;
+  }
+}
+@media screen and (min-width: 900px) {
   .gallery__block {
     grid-template-columns: 1fr 1fr;
+    max-width: 800px;
+    margin: 0 auto 2em;
+  }
+  .gallery__card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
   }
 }
-@media (min-width: 750px) {
+@media screen and (min-width: 1200px) {
   .gallery__block {
-    max-width: 80%;
-  }
-}
-@media (min-width: 1000px) {
-  .gallery__block {
-    max-width: 100%;
     grid-template-columns: repeat(4, 1fr);
+    max-width: 100%;
   }
 }
+
 .advantages {
   color: rgb(255, 255, 255);
   padding-block: 3em;
@@ -874,14 +873,12 @@ input {
   width: 80%;
   max-width: 300px;
   text-align: left;
-  color: inherit;
   border: 1px solid rgb(133, 133, 133);
   padding: 0.5em;
   margin: 0 auto;
 }
 .form > input[type=submit] {
   text-align: center;
-  color: rgb(0, 0, 0);
 }
 @media (min-width: 500px) {
   .form {
