--- a/sass/layouts/_gallery.scss
+++ b/sass/layouts/_gallery.scss
@@ -1,5 +1,4 @@
 .gallery {
-    text-align: center;
     padding-bottom: 3em;
 
     &__block {
@@ -9,29 +8,25 @@
     }
 
     &__heading {
+        text-align: center;
         max-width: 760px;
         margin: 0 auto 2em;
     }
 
-}
-
-.segment {
-    text-align: start;
-    max-width: 350px;
-    margin: 0 auto;
-
     &__img {
-        width: 100%;
-        margin-bottom: 1em;
+        margin-bottom: 0.5em;
+
+        &>img {
+            width: 100%;
+        }
     }
 
     &__title {
         position: relative;
-        padding-bottom: 0.5em;
-        border-bottom: 1px solid $clr-gray-light;
-        margin-bottom: 1em;
+        padding-right: 2em;
+        border-bottom: $clr-border;
 
-        & > span {
+        &>span {
             position: absolute;
             top: 0;
             right: 0;
@@ -40,38 +35,43 @@
         }
     }
 
-    &__text {
-        line-height: 1.3;
+    &__btn {
+        text-align: center;
     }
-}
 
-@media (min-width: 500px) {
-    
-    .gallery {
+    @include break($breakpoint-tablet-portrait) {
+        &__card {
+            @include flex(row, space-between, flex-start);
+            gap: 1em;
+        }
 
+        &__img {
+            flex-basis: 35%;
+            flex-shrink: 0;
+            margin-bottom: 0;
+        }
+
+        &__text {
+            flex-grow: 1;
+        }
+    }
+
+    @include break($breakpoint-tablet-landscape) {
         &__block {
             grid-template-columns: 1fr 1fr;
+            max-width: 800px;
+            margin: 0 auto 2em;
+        }
+
+        &__card {
+            @include flex(column, space-between, stretch);
         }
     }
-}
 
-@media (min-width: 750px) {
-    
-    .gallery {
-
+    @include break($breakpoint-desktop) {
         &__block {
-            max-width: 80%;
-        }
-    }
-}
-
-@media (min-width: 1000px) {
-    
-    .gallery {
-
-        &__block {
-            max-width: 100%;
             grid-template-columns: repeat(4, 1fr);
+            max-width: 100%;
         }
     }
 }
