--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,74 +1,73 @@
 .menu {
     padding-block: 3em;
 
-    &__category {
-        margin-bottom: 2em;
-
-        &>h3 {
-            font-weight: $fw-normal;
-            margin-bottom: 0.5em;
-        }
+    &__card {
+        max-width: 490px;
     }
-}
-
-.card {
-    max-width: 490px;
-    margin-bottom: 3em;
 
     &__img {
         margin-bottom: 2em;
     }
+
+    &__gallery {
+        margin-top: 3em;
+
+        & >*+* {
+            margin-top: 2em;
+        }
+    }
+
+    &__category > *+* {
+        margin-top: 1em;
+    }
+
+    @include break($breakpoint-tablet-landscape) {
+        @include flex(row, space-between, flex-start);
+
+        &__card {
+            flex-basis: 40%;
+        }
+
+        &__gallery {
+            flex-basis: 55%;
+        }
+    }
 }
 
 .item {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1em;
-    line-height: 1.3;
-    color: $clr-gray-dark;
+    line-height: 1.1;
 
     &__img {
         max-width: 84px;
         margin-bottom: 0.5em;
     }
 
-    &__title>h4 {
-        font-weight: $fw-normal;
+    &__title > p {
+        color: $clr-gray-dark;
     }
 
     &__price {
-        color: $clr-black;
+        font-family: $ff-title;
+        font-weight: $fw-bold;
+        font-size: 1.2em;
+        color: $clr-gray-darker
     }
-}
 
-@media (min-width: 500px) {
+    @include break($breakpoint-tablet-portrait) {
+        @include flex(row, flex-start);
 
-    .item {
-        flex-direction: row;
-        align-items: center;
-
-        &>* {
+        &__img {
             margin-bottom: 0;
         }
 
-        &__img {
-            margin-right: 1em;
-            flex: auto;
-        }
-    }
-}
-
-@media (min-width: 750px) {
-
-    .item {
-
         &__title {
             position: relative;
-            flex: 100%;
+            flex-basis: 100%;
             padding-right: 2em;
+            margin-left: 1em;
 
             &>p {
-                border-bottom: 2px solid $clr-gray-dark;
+                border-bottom: 2px dotted $clr-gray-darker;
             }
         }
 
@@ -76,25 +75,6 @@
             position: absolute;
             right: 0;
             bottom: 0;
-            color: inherit;
-        }
-    }
-}
-
-@media (min-width: 1000px) {
-
-    .menu {
-        display: flex;
-        justify-content: space-between;
-
-        &__card {
-            flex-basis: 35%;
-        }
-
-        &__gallery {
-            flex-basis: 60%;
-            max-width: 820px;
-            padding-top: 2.5em;
         }
     }
 }
