--- a/sass/layouts/_offers.scss
+++ b/sass/layouts/_offers.scss
@@ -1,13 +1,11 @@
 .offers {
     padding-block: 3em;
 
-}
-
-.offer {
-    color: $clr-secondary;
-    background-color: $clr-blue-light;
-    padding: 2em 1em;
-    margin-bottom: 1em;
+    &__deal {
+        background-color: $clr-blue-light;
+        padding: 2em;
+        margin-bottom: 1em;
+    }
 
     &__price {
         color: $clr-secondary;
@@ -24,7 +22,7 @@
         padding-right: 1em;
         margin-bottom: 2em;
 
-        & > span {
+        &>span {
             display: block;
 
             &:nth-of-type(1) {
@@ -37,41 +35,33 @@
         }
     }
 
-    &__text > .section-heading__title {
+    &__text>.section-heading__title {
         border-color: inherit;
     }
 
     &__img {
-        max-width: 60%;
+        max-width: 80%;
         margin: 0 auto;
     }
-}
 
-@media (min-width: 500px) {
-    
-    .offer {
-        max-width: 75%;
-        padding: 2em;
-        margin: 0 auto 1em;
-    }
-}
-
-@media (min-width: 750px) {
-
-    .offers__block {
-        display: flex;
-        justify-content: space-between;
-        gap: 1em;
-    }
-}
-
-@media (min-width: 1000px) {
-
-    .offer {
-        display: flex;
-        align-items: center;
+    @include break($breakpoint-tablet-portrait) {
+        &__deal {
+            @include flex(row);
+        }
 
         &__text {
+            margin-bottom: 0;
+        }
+    }
+
+    @include break($breakpoint-tablet-landscape) {
+        &__block {
+            @include flex(row, space-between, stretch);
+            gap: 2em;
+            align-content: flex-start;
+        }
+
+        &__deal {
             margin-bottom: 0;
         }
     }
