--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ legend {
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
@@ -274,14 +278,69 @@ input {
 
 .header {
   text-align: center;
-  padding-block: 2em;
 }
 .header-bg {
   background-color: rgb(41, 46, 54);
-  border-bottom: 1px solid rgb(133, 133, 133);
 }
 .header__nav {
   display: none;
+  border-bottom: 1px solid rgb(133, 133, 133);
+}
+@media screen and (min-width: 900px) {
+  .header__nav {
+    display: block;
+  }
+}
+
+.nav__list {
+  color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__link {
+  padding-block: 1em;
+  transition: 200ms color ease-in;
+}
+.nav__link--active {
+  color: rgb(225, 177, 104);
+}
+.nav__link:hover {
+  color: rgb(225, 177, 104);
+}
+.nav__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  line-height: 1;
+}
+.nav__social-list > * + * {
+  margin-left: 1em;
+}
+@media screen and (min-width: 900px) {
+  .nav__social-list {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav__list {
+    flex-basis: 70%;
+  }
+  .nav__social-list {
+    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .info {
@@ -289,6 +348,8 @@ input {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid rgb(133, 133, 133);
+  padding-block: 2em;
 }
 .info > * {
   margin-bottom: 1em;
@@ -753,47 +814,39 @@ input {
 .advantages-bg {
   background-color: rgb(41, 46, 54);
 }
-.advantages__heading > h2 {
-  color: inherit;
-}
-.advantages__block {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
 .advantages__card {
+  max-width: 450px;
   text-align: center;
   padding: 2em;
   border: 20px solid rgb(52, 57, 66);
+  margin: 0 auto 1em;
 }
 .advantages__card > img {
   margin: 0 auto 0.5em;
 }
-@media (min-width: 500px) {
-  .advantages__card {
-    width: 70%;
-    margin: 0 auto;
-  }
-}
-@media (min-width: 750px) {
+@media screen and (min-width: 900px) {
   .advantages__block {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: stretch;
+    gap: 1em;
   }
   .advantages__card {
-    flex: 0 0 30%;
+    margin: 0;
+    flex-basis: 30%;
   }
 }
-@media (min-width: 1000px) {
+@media screen and (min-width: 1200px) {
   .advantages {
     display: flex;
-    align-items: flex-start;
+    flex-direction: row;
     justify-content: space-between;
-    gap: 2em;
+    align-items: center;
   }
   .advantages__heading {
-    flex-basis: 35%;
-    margin-bottom: 0;
+    max-width: 440px;
+    flex-basis: 40%;
   }
   .advantages__block {
     flex-basis: 60%;
@@ -803,57 +856,55 @@ input {
 .blog {
   padding-block: 3em;
 }
-@media (min-width: 750px) {
-  .blog__preview {
-    max-width: 700px;
-    margin: 0 auto;
-  }
+.blog__preview {
+  margin-bottom: 1em;
 }
-@media (min-width: 1000px) {
-  .blog__block {
-    display: flex;
-    justify-content: space-between;
-    gap: 2em;
-  }
-}
-
-.preview__btn {
+.blog__btn {
   position: relative;
 }
-.preview__btn::after {
-  position: absolute;
-  top: 0;
+.blog__btn::after {
   display: block;
   content: "";
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(52, 57, 66, 0.6);
 }
-.preview__btn > img {
+.blog__btn > img {
   width: 100%;
 }
-.preview__btn > button {
+.blog__btn > button {
   position: absolute;
   top: calc(50% - 25px);
   left: 50%;
   transform: translateX(-50%);
   z-index: 10;
 }
-.preview__text {
-  border: 2px solid rgb(196, 196, 196);
+.blog__text {
+  border: 1px solid rgb(133, 133, 133);
   border-top: none;
   padding: 1.5em;
+  margin-bottom: 0;
 }
-.preview__text > span + span {
+.blog__text > span + span {
   margin-left: 1em;
+}
+@media screen and (min-width: 900px) {
+  .blog__block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 1em;
+  }
 }
 
 .reservation {
   text-align: center;
-  max-width: 920px;
   color: rgb(255, 255, 255);
-  background-color: rgba(41, 46, 54, 0.9);
-  padding-block: 3em;
+  background-color: rgba(52, 57, 66, 0.9);
+  padding: 3em;
   margin: 0 auto;
 }
 .reservation-bg {
@@ -863,15 +914,24 @@ input {
   background-size: cover;
   padding-block: 5em;
 }
+@media screen and (min-width: 600px) {
+  .reservation {
+    max-width: 600px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .reservation {
+    max-width: 900px;
+  }
+}
 
 .form {
   display: grid;
-  grid-gap: 1em;
+  row-gap: 1em;
   margin: 0 auto;
 }
 .form > input {
-  width: 80%;
-  max-width: 300px;
+  width: 90%;
   text-align: left;
   border: 1px solid rgb(133, 133, 133);
   padding: 0.5em;
@@ -880,14 +940,9 @@ input {
 .form > input[type=submit] {
   text-align: center;
 }
-@media (min-width: 500px) {
+@media screen and (min-width: 900px) {
   .form {
-    width: 70%;
-  }
-}
-@media (min-width: 750px) {
-  .form {
-    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "legend legend" "name email" "persons date" "btn btn";
   }
   .form > legend {
@@ -929,25 +984,24 @@ input {
   margin-bottom: 1em;
 }
 .subscribe__form {
-  width: 60%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
   margin: 0 auto;
 }
 .subscribe__form > input[type=email] {
+  width: 80%;
   text-align: left;
   color: inherit;
   border: 1px solid rgb(133, 133, 133);
   padding: 0.5em;
   margin-bottom: 1em;
 }
-.subscribe__form > input[type=submit] {
-  width: 100%;
-}
-@media (min-width: 750px) {
+@media screen and (min-width: 900px) {
   .subscribe__form {
     flex-direction: row;
-    width: 80%;
   }
   .subscribe__form > input[type=email] {
     flex: 1 0 70%;
@@ -970,12 +1024,16 @@ input {
 }
 .footer__links-list {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
+  align-items: center;
 }
-@media (min-width: 750px) {
+@media screen and (min-width: 900px) {
   .footer {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
   }
   .footer__links {
     margin-block: 0;
