--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -6,61 +6,40 @@
         background-color: $clr-secondary;
     }
 
-    &__heading>h2 {
-        color: inherit;
-    }
-
-    &__block {
-        display: flex;
-        flex-direction: column;
-        gap: 1em;
-    }
-
     &__card {
+        max-width: 450px;
         text-align: center;
         padding: 2em;
         border: 20px solid $clr-gray-darker;
+        margin: 0 auto 1em;
 
         &>img {
             margin: 0 auto 0.5em;
         }
     }
 
-    @media (min-width: 500px) {
+    @include break($breakpoint-tablet-landscape) {
 
-        &__card {
-            width: 70%;
-            margin: 0 auto;
-        }
-    }
-
-    @media (min-width: 750px) {
-        
         &__block {
-            flex-direction: row;
-            justify-content: space-between;
+            @include flex(row, space-between, stretch);
+            gap: 1em;
         }
 
         &__card {
-            flex: 0 0 30%;
+            margin: 0;
+            flex-basis: 30%
         }
     }
 
-    @media (min-width: 1000px) {
-
-        & {
-            display: flex;
-            align-items: flex-start;
-            justify-content: space-between;
-            gap: 2em;
-        }
+    @include break($breakpoint-desktop) {
+        @include flex(row);
 
         &__heading {
-            flex-basis:  35%;
-            margin-bottom: 0;
+            max-width: 440px;
+            flex-basis: 40%;
         }
 
-        &__block {
+        &__block{
             flex-basis: 60%;
         }
     }
