--- a/sass/layouts/_blog.scss
+++ b/sass/layouts/_blog.scss
@@ -1,32 +1,18 @@
 .blog {
     padding-block: 3em;
 
-    @media (min-width: 750px) {
-        &__preview {
-            max-width: 700px;
-            margin: 0 auto;
-        }
+    &__preview {
+        margin-bottom: 1em;
     }
-
-    @media (min-width: 1000px) {
-        &__block {
-            display: flex;
-            justify-content: space-between;
-            gap: 2em;
-        }
-    }
-}
-
-.preview {
 
     &__btn {
         position: relative;
 
         &::after {
-            position: absolute;
-            top: 0;
             display: block;
             content: "";
+            position: absolute;
+            top: 0;
             width: 100%;
             height: 100%;
             background-color: rgba(52, 57, 66, 0.6);
@@ -46,12 +32,22 @@
     }
 
     &__text {
-        border: 2px solid $clr-gray-light;
+        border: $clr-border;
         border-top: none;
         padding: 1.5em;
+        margin-bottom: 0;
+        
 
         &>span+span {
             margin-left: 1em;
+        }
+    }
+
+    @include break($breakpoint-tablet-landscape) {
+
+        &__block {
+            @include flex(row, space-between, stretch);
+            gap: 1em;
         }
     }
 }
