--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -14,15 +14,13 @@
         margin-block: 2em;
 
         &-list {
-            display: flex;
-            justify-content: space-around;
+            @include flex(row, space-around);
         }
     }
 
-    @media (min-width: 750px) {
+    @include break($breakpoint-tablet-landscape) {
         & {
-            display: flex;
-            justify-content: space-between;
+            @include flex(row, space-between, flex-start);
         }
 
         &__links {
