--- a/sass/layouts/_reservation.scss
+++ b/sass/layouts/_reservation.scss
@@ -1,9 +1,8 @@
 .reservation {
     text-align: center;
-    max-width: 920px;
     color: $clr-white;
-    background-color: rgba(41, 46, 54, 0.9);
-    padding-block: 3em;
+    background-color: $clr-bg-opacity;
+    padding: 3em;
     margin: 0 auto;
 
     &-bg {
@@ -13,18 +12,25 @@
         background-size: cover;
         padding-block: 5em;
     }
+
+    @include break($breakpoint-tablet-portrait) {
+        max-width: 600px;
+    }
+
+    @include break($breakpoint-tablet-landscape) {
+        max-width: 900px;
+    }
 }
 
 .form {
     display: grid;
-    grid-gap: 1em;
+    row-gap: 1em;
     margin: 0 auto;
 
     &>input {
-        width: 80%;
-        max-width: 300px;
+        width: 90%;
         text-align: left;
-        border: 1px solid $clr-gray;
+        border: $clr-border;
         padding: 0.5em;
         margin: 0 auto;
     }
@@ -33,14 +39,8 @@
         text-align: center;
     }
 
-    @media (min-width: 500px) {
-        & {
-            width: 70%;
-        }
-    }
-
-    @media (min-width: 750px) {
-        grid-template-columns: repeat(2, minmax(150px, 1fr));
+    @include break($breakpoint-tablet-landscape) {
+        grid-template-columns: repeat(2, 1fr);
         grid-template-areas:
             "legend legend"
             "name email"
