--- a/sass/layouts/_subscribe.scss
+++ b/sass/layouts/_subscribe.scss
@@ -18,28 +18,23 @@
     }
 
     &__form {
-        width: 60%;
-        display: flex;
-        flex-direction: column;
+        @include flex(column);
+        width: 70%;
         margin: 0 auto;
     }
 
     &__form>input[type="email"] {
+        width: 80%;
         text-align: left;
         color: inherit;
-        border: 1px solid $clr-gray;
+        border: $clr-border;
         padding: 0.5em;
         margin-bottom: 1em;
     }
 
-    &__form>input[type="submit"] {
-        width: 100%;
-    }
-
-    @media (min-width: 750px) {
+    @include break($breakpoint-tablet-landscape) {
         &__form {
             flex-direction: row;
-            width: 80%;
         }
 
         &__form>input[type="email"] {
