--- a/sass/layouts/_blog.scss
+++ b/sass/layouts/_blog.scss
@@ -32,7 +32,7 @@
     }
 
     &__text {
-        border: $clr-border;
+        border: $border;
         border-top: none;
         padding: 1.5em;
         margin-bottom: 0;
