--- a/sass/layouts/_offers.scss
+++ b/sass/layouts/_offers.scss
@@ -1,6 +1,10 @@
 .offers {
     padding-block: 3em;
 
+    &__block {
+        color: $clr-white;
+    }
+
     &__deal {
         background-color: $clr-blue-light;
         padding: 2em;
