--- a/sass/base/_basic.scss
+++ b/sass/base/_basic.scss
@@ -11,23 +11,19 @@
     margin: 0;
   }
 
-  html {
-    scroll-behavior: smooth;
-  }
-
   body {
     font-family: $ff-text;
     font-weight: $fw-normal;
     line-height: 1.6;
     font-size: $fs-text;
     color: $clr-secondary;
+    overflow-x: hidden;
   }
 
   h1, h2, h3, h4, h5 {
     font-family: $ff-title;
     font-weight: $fw-normal;
     line-height: 1.1;
-    margin-top: 0;
     margin-bottom: 0.3em;
   }
 
