--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -2,12 +2,12 @@ $clr-primary: rgba(225, 177, 104, 1);
 $clr-secondary: rgba(41, 46, 54, 1);
 $clr-white: rgba(255, 255, 255, 1);
 $clr-black: rgba(0, 0, 0, 1);
-$clr-gray: rgba(133, 133, 133, 1);
-$clr-gray-light: rgba(196, 196, 196, 1);
-$clr-gray-dark: rgba(92, 97, 104, 1);
-$clr-gray-darker: rgba(52, 57, 66, 1);
+$clr-gray-dark: rgba(52, 57, 66, 1);
 $clr-pink-light: rgb(244, 221, 211);
-$clr-blue-light: rgba(130, 180, 180, 1);
+$clr-blue-light: rgba(45, 159, 159, 1);
 
-$clr-border: 1px solid $clr-gray;
-$clr-bg-opacity: rgba(52, 57, 66, 0.9);
+$clr-arrow-up: rgba(220, 220, 220, 1);
+$clr-border: rgba(133, 133, 133, 1);
+
+$border: 1px solid $clr-border;
+$clr-bg-opacity: rgba(52, 57, 66, 0.85);
