--- a/sass/base/_components.scss
+++ b/sass/base/_components.scss
@@ -3,15 +3,15 @@
     font-size: $fs-btn;
     line-height: 1.4;
     border: none;
-    outline: 3px solid $clr-primary;
     cursor: pointer;
     padding: 0.5em 0;
     width: calc(230px + 2vw);
     background-color: transparent;
-    transition: all 200ms ease-in;
+    transition: all 150ms ease-in-out;
 
     &--border {
         color: $clr-primary;
+        border: 3px solid $clr-primary;
     }
 
     &--color {
@@ -22,17 +22,21 @@
     &--submit {
         color: $clr-black;
         background-color: $clr-white;
-        outline: none;
+        border: none;
     }
 
     &--border:hover,
     &--color:hover,
     &--submit:hover {
-            color: $clr-white;
-            outline: 3px solid $clr-white;
-            outline-offset: -5px;
-            background-color: darken($clr-primary, 15%);
-        }
+        color: $clr-white;
+        background-color: darken($clr-primary, 15%);
+    }
+
+    &--border:hover {
+        border-color: darken($clr-primary, 15%);
+    }
+
+
 }
 
 
@@ -50,7 +54,22 @@
         margin-bottom: 1em;
     }
 
-    & > p {
+    &>p {
         line-height: 1.3;
+    }
+}
+
+
+.arrow-up {
+    position: fixed;
+    bottom: 1.5em;
+    right: 1.5em;
+    opacity: 0.5;
+    background-color: $clr-arrow-up;
+    padding: 0.3em;
+    border-radius: 50%;
+
+    &:hover {
+        opacity: 1;
     }
 }
