--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,71 +6,13 @@
     }
 
     &__nav {
-        display: none;
-        border-bottom: $clr-border;
-    }
-
-    @include break($breakpoint-tablet-landscape) {
-        &__nav {
-            display: block;
-        }
+        border-bottom: $border;
     }
 }
-
-.nav {
-
-    &__list {
-        color: $clr-white;
-        @include flex(row);
-    }
-
-    &__link {
-        padding-block: 1em;
-        transition: 200ms color ease-in;
-
-        &--active {
-            color: $clr-primary;
-        }
-
-        &:hover {
-            color: $clr-primary;
-        }
-    }
-
-    &__social-list {
-        @include flex(row, flex-end);
-        line-height: 1;
-
-        &>*+* {
-            margin-left: 1em;
-        }
-    }
-
-    @include break($breakpoint-tablet-landscape) {
-
-        &__social-list {
-            display: none;
-        }
-    }
-
-    @include break($breakpoint-desktop) {
-        @include flex(row);
-
-        &__list {
-            flex-basis: 70%;
-        }
-
-        &__social-list {
-            display: block;
-            @include flex(row);
-        }
-    }
-}
-
 
 .info {
     @include flex(column);
-    border-bottom: $clr-border;
+    border-bottom: $border;
     padding-block: 2em;
 
     &>* {
@@ -94,6 +36,132 @@
         &__logo {
             order: 0;
             flex-basis: 30%;
+        }
+    }
+}
+
+// *****hamburger-menu*******
+
+@media screen and (max-width: $brekpoint-mobile) {
+
+    .hamburger-menu-toggle {
+        position: absolute;
+        left: 1em;
+        top: 1em;
+        cursor: pointer;
+        border-radius: 5px;
+        padding: 1em;
+        background-color: transparent;
+        z-index: 10;
+        background-image: url(./../assets/icons/hamburger-menu-open.svg);
+        border: 1px solid $clr-primary;
+    }
+
+    .toggle--close {
+        background-image: url(./../assets/icons/hamburger-menu-close.svg);
+        border-color: $clr-white;
+    }
+
+    .nav {
+        display: none;
+        color: $clr-white;
+
+        &__list {
+            margin-bottom: 1em;
+
+            &>*+* {
+                margin-top: 0.5em;
+            }
+        }
+
+        &__link {
+            padding: 0.5em;
+            transition: all ease-out 100ms;
+
+            &:hover {
+                color: $clr-primary;
+            }
+        }
+
+        &__social-list {
+            @include flex(row, space-around);
+            padding-block: 0.5em;
+        }
+
+        &__social-link {
+            padding: 0.5em;
+        }
+    }
+
+    .nav--open {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding-top: 1em;
+        background-color: $clr-secondary;
+        text-align: center;
+    }
+}
+
+// *****hamburger-menu end*******
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+@include break($breakpoint-tablet-portrait) {
+    .hamburger-menu-toggle {
+        display: none;
+    }
+
+    .nav {
+        color: $clr-white;
+        margin-bottom: 1em;
+
+        &__list {
+            @include flex(row);
+            flex-wrap: wrap;
+        }
+
+        &__link {
+            padding-block: 1em;
+
+            &:hover {
+                color: $clr-primary;
+            }
+        }
+
+        &__social-list {
+            @include flex(row, flex-end);
+
+            &>*+* {
+                margin-left: 1em;
+            }
+        }
+
+        &__social-link {
+            vertical-align: middle;
+        }
+    }
+}
+
+@include break($breakpoint-tablet-landscape) {
+    .nav {
+        @include flex(row);
+        margin-bottom: 0;
+
+        &__list {
+            flex-basis: 70%;
         }
     }
 }
